[package]
name = "fsuipc"
description = "FSUIPC client for Rust programming language"
version = "0.4.0"
authors = ["Alvaro Polo <apoloval@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/apoloval/fsuipc-rs"
readme = "README.md"
keywords = ["fsuipc", "fsx", "p3d", "simulation"]
edition = "2018"

[dependencies]
byteorder = "0.5"
winapi = {version = "0.3.9", features = ["handleapi", "winnt", "windef", "minwindef", "memoryapi", "winuser", "processthreadsapi", "winbase"]}
